# IMAC_DiscreteGeometry

./: .directory  .gitignore  CMakeLists.txt  README.md  cmakeInstall.bat
src/: main.cpp
src/TD01/: CMakeLists.txt  Rapport.md  main.cpp
src/TD02/: CMakeLists.txt  Rapport.md  data_basmati.csv  data_camargue.csv  data_japonais.csv  main.cpp  main456.cpp
src/TD03/: CMakeLists.txt  main.cpp  main3.cpp  rapport.md
src/TD03/img/: IMG_2764_motionTo2763.pgm  IMG_2765_motionTo2763.pgm  IMG_2766_motionTo2763.pgm
